# gazelle-repro-895

./: WORKSPACE  gazelle.bzl  go.mod  go.sum
example/: BUILD.bazel  README.md  WORKSPACE  gazelle.bzl  go.mod  root-gazelle.bzl
example/foo/: BUILD.bazel  foo
foo/: main.go
