load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/src",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golobby_config//:go_default_library"],
)

go_binary(
    name = "foo",
    embed = [":foo_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "foo_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/foo",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golobby_config//:go_default_library"],
)
